add links and code for browser games

--- a/staticfiles/files/pong/index.html
+++ b/staticfiles/files/pong/index.html
@@ -1,10 +1,10 @@
 <html>
 <body bgcolor="#000000">
 <center>
-<p><a href="http://www.codeskulptor.org/#user41_WytdSKeF98yfn8M.py"><img src="bg-c.jpg"></a></p>
+<p><a href="http://www.codeskulptor.org/#user47_WytdSKeF98yfn8M_0.py"><img src="bg-c.jpg"></a></p>
 <font color="#ffffff">
 <p>Click on the image to go to the game. Once there, press the <img src="run.jpg" alt="Run"> button at the top of the page.</p>
-<p>IMPORTANT: This game only works in Google Chrome. If Chrome won't load the file, use Chrome's Incognito mode.</p>
+<p>NOTE: The CodeSkulptor engine experiences some compatibility issues on various browsers from time to time. In particular, if sound doesn't work, try another browser.</p>
 </font>
 </center>
 </body>
