clarify play instructions for browser games

--- a/staticfiles/files/pong/index.html
+++ b/staticfiles/files/pong/index.html
@@ -1,9 +1,10 @@
 <html>
+<head><title>Digital Ping Pong</title></head>
 <body bgcolor="#000000">
 <center>
 <p><a href="http://www.codeskulptor.org/#user47_WytdSKeF98yfn8M_0.py"><img src="bg-c.jpg"></a></p>
 <font color="#ffffff">
-<p>Click on the image to go to the game. Once there, press the <img src="run.jpg" alt="Run"> button at the top of the page.</p>
+<p>Click on the image above to go to the game. Once there, press the <img src="run.jpg" alt="Run"> button at the top of the page.</p>
 <p>NOTE: The CodeSkulptor engine experiences some compatibility issues on various browsers from time to time. In particular, if sound doesn't work, try another browser.</p>
 </font>
 </center>
