--- a/staticfiles/files/rescape/index.html
+++ b/staticfiles/files/rescape/index.html
@@ -1,10 +1,11 @@
 <html>
+<head><title>Pocket Universe Rescape</title></head>
 <body bgcolor="#000000">
 <center>
-<p><a href="http://www.codeskulptor.org/#user43_iBf8raJv1KvT4tx.py"><img src="images/splash.png"></a></p>
+<p><a href="http://www.codeskulptor.org/#user47_4H0IlVHxZn_0.py"><img src="images/splash.png"></a></p>
 <font color="#ffffff">
-<p>Click on the image to go to the game. Once there, press the <img src="run.jpg" alt="Run"> button at the top of the page.</p>
-<p>IMPORTANT: This game only works in Google Chrome. If Chrome won't load the file, use Chrome's Incognito mode.</p>
+<p>Click on the image above to go to the game. Once there, press the <img src="run.jpg" alt="Run"> button at the top of the page.</p>
+<p>NOTE: The CodeSkulptor engine experiences some compatibility issues on various browsers from time to time. In particular, if sound doesn't work, try another browser.</p>
 </font>
 </center>
 </body>
